opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mhttp"
dev-repo: "git+https://github.com/robur-coop/mhttp.git"
bug-reports: "https://github.com/robur-coop/mhttp/issues"

depends: [
  "ocaml" {>= "5.0.0"}
  "utcp"
  "dune" {>= "2.7.0"}
  "mkernel"
  "mnet"
  "mirage-crypto-rng"
  "httpcats"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An implementation of HTTP in OCaml for unikernels"

pin-depends: [
  [ "mkernel.dev" "git+https://git.robur.coop/robur/mkernel.git#e43e71a74a72b9849d5b01cd249c52e94ea1d57a" ]
  [ "utcp.dev" "git+https://github.com/robur-coop/utcp.git#50d0f3a0b42e8ffd3e4b15131dcf2a61b87ef96b" ]
  [ "mnet.dev" "git+https://git.robur.coop/robur/mnet.git#26214790b53df78c00eafc48594cfa01290de0df" ]
  [ "ocaml-unikraft.1.0.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-backend-qemu.0.18.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "httpcats.dev" "git+https://github.com/robur-coop/httpcats.git#56ad42dd5667c1699240c609fd0e193f88bba1fb" ]
  [ "mirage-crypto-rng-mkernel.2.0.2" "git+https://github.com/dinosaure/mirage-crypto.git#820db4c1d19acd06dca82ce5615904848a852951" ]
]
